--- a/app/views/members/show.html.erb
+++ b/app/views/members/show.html.erb
@@ -9,7 +9,7 @@
     <div id=x_header>
       <table width=100%><tr>
         <td align=left width=33%>Member Detail</td>
-        <td align=center width=33%><%= link_to("Roster", members_path) %> | <%= link_to("Edit", edit_member_path(@member)) %> | Delete</td>
+        <td align=center width=33%><%= link_to("Edit", edit_member_path(@member)) %> | Delete</td>
         <td align=right width=33%>
             <input size=14 id="autoselect" value="Find Member">
         </td>
