--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -104,6 +104,11 @@ pre {
   /*margin-top: 0px;*/
 }
 
+#xbody {
+  margin-left: 30px;
+  margin-right: 30px;
+}
+
 /* Help Page */
 
 .side_nav {
@@ -187,35 +192,6 @@ pre {
 #sub_nav_label {
     text-align: right;
 }
-
-/* Tree */
-#treenav {
-    /*float: left;*/
-    /*width: 100px;*/
-    /*border: solid;*/
-    /*border-color: #a9a9a9;*/
-    /*border-width: 1px;*/
-    /*padding: 2px;*/
-    /*overflow: hidden;*/
-    /*overflow: hidden;*/
-}
-
-#conttt {
-    /*float: right;*/
-    /*width: 100%*/
-    /*width: 854px;*/
-}
-
-#yield {
-    padding: 8px;
-    overflow: auto;
-    height: 395px;
-}
-
-#super {
-    height: 450px;
-}
-
 
 /* Settings Nav */
 
