--- a/app/views/members/show.html.erb
+++ b/app/views/members/show.html.erb
@@ -17,7 +17,7 @@
     </div>
     <div id=x_left_col>
       <b><%= @member.first_name %> <%= @member.last_name %><br/></b>
-      <%= @member.typ %><p/>
+      <%= @member.full_roles %><p/>
       <b>Ham:</b> <%= @member.ham %><br/>
       <b>V9:</b> <%= @member.v9 %><p/>
       <%= raw @member.all_assoc %>
