--- a/app/views/members/edit.html.erb
+++ b/app/views/members/edit.html.erb
@@ -30,6 +30,7 @@
         <%= f.select :typ, %w(TM FM T R S A) %>
         Bd: <%= f.check_box('bd') %>
         OL: <%= f.check_box('ol') %><p/>
+        <b>Password, Ham & V9</b><br/>
         <span class=plabel>Password: </span>
         <%= f.password_field :password, :size => 13 %>
         <span class=hlabel>Ham: </span>
@@ -51,7 +52,7 @@
         <p/><b>Addresses</b> <span class=add><%= link_to_function("add", "add_address(this);")%></span><br/>
         <%= f.fields_for :addresses do |address| %>
           <%= address.text_area :full_address, :size => "20x2" %>
-          <%= address.select :typ, %w(Other Home Work) %> remove
+          <%= address.select :typ, %w(Other Home Work), {}, {:class => "upp"} %><span class=upp> remove</span>
         <% end %>
         </p><%= f.submit %>
         <p/>
