--- a/app/views/shared/_error_messages.html.erb
+++ b/app/views/shared/_error_messages.html.erb
@@ -1,8 +1,8 @@
-<% if target.errors.any? %>
+<% if target.scrubbed_errors.any? %>
   <div id="errorExplanation">
-    <h2><%= pluralize(target.errors.count, "error") %> prohibited this record from being saved:</h2>
+    <h2><%= pluralize(target.scrubbed_errors.count, "error") %> prohibited this record from being saved:</h2>
     <ul>
-      <% target.errors.full_messages.each do |msg| %>
+      <% target.full_messages.each do |msg| %>
         <li><%= msg %></li>
       <% end %>
     </ul>
