--- a/app/views/members/edit.html.erb
+++ b/app/views/members/edit.html.erb
@@ -54,8 +54,10 @@
         <% end %>
         <p/><b>Addresses</b> <span class=add><%= link_to_function("add", "add_address(this);")%></span><br/>
         <%= f.fields_for :addresses do |address| %>
+          <%# address.text_field :zip, :size => 10 %>
           <%= address.text_area :full_address, :size => "20x2" %>
-          <%= address.select :typ, %w(Other Home Work), {}, {:class => "upp"} %><span class=upp> remove</span>
+          <%= address.select :typ, %w(Other Home Work), {}, {:class => "upp"} %>
+          <span class=upp> remove</span><br/>
         <% end %>
         </p><%= f.submit %>
         <p/>
