--- a/app/views/members/edit.html.erb
+++ b/app/views/members/edit.html.erb
@@ -37,18 +37,20 @@
         <b>Phones</b> <span class=add><%= link_to_function("add", "add_phone(this);")%></span><br/>
         <%= f.fields_for :phones do |phone| %>
           <%= phone.text_field :number, :size => 10 %>
-          <%= phone.select :typ, %w(Other Mobile Home Work) %> remove<br/>
+          <%= phone.select :typ, %w(Other Mobile Home Work) %>
+          <%= phone.check_box :_destroy %> remove<br/>
         <% end %>
         <p/><b>eMails</b> <span class=add><%= link_to_function("add", "add_email(this);") %></span><br/>
         <%= f.simple_fields_for :emails do |email| %>
           <span style=":red;"><%= email.text_field :address, :size => 20 %></span>
-          <%= email.select :typ, %w(Other Personal Work) %> remove<br/>
+          <%= email.select :typ, %w(Other Personal Work) %>
+          <%= email.check_box :_destroy %> remove<br/>
         <% end %>
         <p/><b>Addresses</b> <span class=add><%= link_to_function("add", "add_address(this);")%></span><br/>
         <%= f.fields_for :addresses do |address| %>
           <%= address.text_area :full_address, :size => "20x2" %>
           <%= address.select :typ, %w(Other Home Work), {}, {:class => "upp"} %>
-          <span class=upp> remove</span><br/>
+          <span class=upp> <%= address.check_box :_destroy %> remove</span><br/>
         <% end %>
         <b>Password</b><br/>
         <span class=plabel>Password: </span>
