--- a/app/views/members/_emergency_contact_fields.html.erb
+++ b/app/views/members/_emergency_contact_fields.html.erb
@@ -1,3 +1,4 @@
 <%= f.text_field :name,   :size => 15 %>
-<%= f.text_field :number, :size => 15 %>
+<%= f.text_field :number, :size => 10 %>
+<%= f.select :typ, %w(Other Mobile Home Work) %>
 R<%= f.check_box :_destroy %><br/>
