phone sorting works

--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -455,6 +455,10 @@ label.collection_check_boxes {
   top: -6px;
 }
 
+.sort_handle {
+  cursor: crosshair;
+}
+
 /*.body { color: black; font-size: 12px; line-height: 16px; font-family: Verdana, Arial, Helvetica, Geneva, Swiss, SunSans-Regular }*/
 .detailname { color: black; font-size: 15px; font-weight: bold; line-height: 19px; font-family: Verdana, Arial, Helvetica, Geneva, Swiss, SunSans-Regular }
 .detailmembertype { color: #888888; font-size: 12px; line-height: 14px; font-family: Verdana, Arial, Helvetica, Geneva, Swiss, SunSans-Regular }
