--- a/app/views/members/_address_fields.html.erb
+++ b/app/views/members/_address_fields.html.erb
@@ -1,3 +1,3 @@
-<%= f.text_area :full_address, :size => "20x2" %>
+(+) <%= f.text_area :full_address, :size => "20x2" %>
 <%= f.select :typ, %w(Other Home Work), {}, {:class => "upp"} %>
 <span class=upp>R<%= f.check_box :_destroy %></span><br/>
