--- a/app/views/members/_other_info_fields.html.erb
+++ b/app/views/members/_other_info_fields.html.erb
@@ -1,3 +1,3 @@
-<%= f.text_field :label,   :size => 15 %>
+(+) <%= f.text_field :label,   :size => 15 %>
 <%= f.text_field :value,   :size => 15 %>
 R<%= f.check_box :_destroy %><br/>
