--- a/app/views/members/_phone_fields.html.erb
+++ b/app/views/members/_phone_fields.html.erb
@@ -1,4 +1,8 @@
-<%= f.text_field :number, :size => 10 %>
-<%= f.select :typ, %w(Other Mobile Home Work) %>
-P<%= f.check_box :pagable %>
-R<%= f.check_box :_destroy %><br/>
+<li style="list-style-type: none;" id=phone_<%=f.id%>>
+  <span class=sort_handle>(+)</span>
+  <%= f.text_field :position, :size => 2 %>
+  <%= f.text_field :number, :size => 10 %>
+  <%= f.select :typ, %w(Other Mobile Home Work) %>
+  P<%= f.check_box :pagable %>
+  R<%= f.check_box :_destroy %><br/>
+</li>
