--- a/app/views/members/edit.html.erb
+++ b/app/views/members/edit.html.erb
@@ -36,13 +36,14 @@
         OL: <%= f.check_box('ol') %>
         <p></p><b>Phones</b> <span class=add><%= link_to_add_fields("add", f, :phones)%></span>
         <div id=sortable_phones>
-          <!--<%# f.fields_for @member.phones.order('position ASC').all do |phone| %>-->
-          <%= f.fields_for :phones do |phone| %>
-            <%= render "phone_fields", :f => phone %>
+          <% @member.phones.sort {|x,y| x.position <=> y.position}.each do |xphone| %>
+            <%= f.fields_for :phones, xphone do |phone| %>
+              <%= render "phone_fields", :f => phone %>
+            <% end %>
           <% end %>
         </div>
         <p/><b>eMails</b> <span class=add><%= link_to_add_fields("add", f, :emails) %></span><br/>
-        <%= f.simple_fields_for :emails do |email| %>
+        <%= f.fields_for :emails do |email| %>
           <%= render "email_fields", :f => email %>
         <% end %>
         <p/><b>Addresses</b> <span class=add><%= link_to_add_fields("add", f, :addresses)%></span><br/>
