--- a/app/views/members/_email_fields.html.erb
+++ b/app/views/members/_email_fields.html.erb
@@ -1,4 +1,8 @@
-(+) <%= f.text_field :address, :size => 20 %>
-<%= f.select :typ, %w(Other Personal Work) %>
-P<%= f.check_box :pagable %>
-R<%= f.check_box :_destroy %><br/>
+<li style="list-style-type: none;" id=email_<%=f.id%>>
+  <span class=sort_handle>(+)</span>
+  <%= f.hidden_field :position, :size => 2 %>
+  <%= f.text_field :address, :size => 20 %>
+  <%= f.select :typ, %w(Other Personal Work) %>
+  P<%= f.check_box :pagable %>
+  R<%= f.check_box :_destroy %><br/>
+</li>
