--- a/app/views/members/_address_fields.html.erb
+++ b/app/views/members/_address_fields.html.erb
@@ -1,6 +1,6 @@
 <li style="list-style-type: none;" id=address_<%=f.id%>>
   <span class=sort_handle>(+)</span>
-  <%= f.text_field :position, :size => 2 %>
+  <%= f.hidden_field :position, :size => 2 %>
   <%= f.text_area :full_address, :size => "20x2" %>
   <%= f.select :typ, %w(Other Home Work), {}, {:class => "upp"} %>
   <span class=upp>R<%= f.check_box :_destroy %></span><br/>
