--- a/app/views/members/_other_info_fields.html.erb
+++ b/app/views/members/_other_info_fields.html.erb
@@ -1,3 +1,7 @@
-(+) <%= f.text_field :label,   :size => 15 %>
-<%= f.text_field :value,   :size => 15 %>
-R<%= f.check_box :_destroy %><br/>
+<li style="list-style-type: none;" id=other_info_<%=f.id%>>
+  <span class=sort_handle>(+)</span>
+  <%= f.hidden_field :position, :size => 2 %>
+  <%= f.text_field :label,   :size => 15 %>
+  <%= f.text_field :value,   :size => 15 %>
+  R<%= f.check_box :_destroy %><br/>
+</li>
